<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!--
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc" >
        <!--<include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:elevation="4dp"
            android:background="@android:color/white" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <!-- start content -->

                <TextView
                    android:id="@+id/tv_transactions_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <EditText
                    android:id="@+id/et_transactions_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|center_vertical"
                    android:ems="10"
                    android:enabled="false"
                    android:maxLength="10"
                    android:hint="@string/transactions_id"
                    android:inputType="number" >
                    <!-- <requestFocus /> -->
                </EditText>


                <TextView
                    android:id="@+id/tv_transactions_account_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_account_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <Spinner
                    android:id="@+id/sp_transactions_account_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/transactions_account_id" />
                <!-- android:entries="@array/transactions_account_id_options" -->


                <TextView
                    android:id="@+id/tv_transactions_transaction_type"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_transaction_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <EditText
                    android:id="@+id/et_transactions_transaction_type"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|top"
                    android:ems="10"
                    android:enabled="true"
                    android:maxLength="10"
                    android:hint="@string/transactions_transaction_type"
                    android:inputType="text" >
                    <!-- <requestFocus /> -->
                </EditText>


                <TextView
                    android:id="@+id/tv_transactions_category_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_category_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <Spinner
                    android:id="@+id/sp_transactions_category_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/transactions_category_id" />
                <!-- android:entries="@array/transactions_category_id_options" -->


                <TextView
                    android:id="@+id/tv_transactions_payee_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_payee_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <Spinner
                    android:id="@+id/sp_transactions_payee_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/transactions_payee_id" />
                <!-- android:entries="@array/transactions_payee_id_options" -->


                <TextView
                    android:id="@+id/tv_transactions_transaction_date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_transaction_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <DatePicker
                    android:id="@+id/et_transactions_transaction_date"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|center_vertical"
                    android:ems="10"
                    android:enabled="true"
                    android:maxLength="10"
                    android:hint="@string/transactions_transaction_date"
                    android:inputType="numberDecimal" >
                    <!-- <requestFocus /> -->
                </DatePicker>


                <TextView
                    android:id="@+id/tv_transactions_notes"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_notes"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <EditText
                    android:id="@+id/et_transactions_notes"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|top"
                    android:ems="10"
                    android:enabled="true"
                    android:maxLength="50"
                    android:hint="@string/transactions_notes"
                    android:inputType="textMultiLine" >
                    android:lines="3"
                    <!-- <requestFocus /> -->
                </EditText>


                <TextView
                    android:id="@+id/tv_transactions_creation_date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_creation_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <TextView
                    android:id="@+id/tv_transactions_last_update_date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_last_update_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <TextView
                    android:id="@+id/tv_transactions_amount"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_amount"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <EditText
                    android:id="@+id/et_transactions_amount"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|center_vertical"
                    android:ems="10"
                    android:enabled="true"
                    android:maxLength="16"
                    android:hint="@string/transactions_amount"
                    android:inputType="numberDecimal" >
                    <!-- <requestFocus /> -->
                </EditText>


                <TextView
                    android:id="@+id/tv_transactions_recurring_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_recurring_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <Spinner
                    android:id="@+id/sp_transactions_recurring_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/transactions_recurring_id" />
                <!-- android:entries="@array/transactions_recurring_id_options" -->


                <TextView
                    android:id="@+id/tv_transactions_to_account_id"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_to_account_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <Spinner
                    android:id="@+id/sp_transactions_to_account_id"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/transactions_to_account_id" />
                <!-- android:entries="@array/transactions_to_account_id_options" -->


                <TextView
                    android:id="@+id/tv_transactions_is_transfer_flag"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_gravity="start"
                    android:text="@string/transactions_is_transfer_flag"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/> <!-- style="@style/TextHeader" -->

                <EditText
                    android:id="@+id/et_transactions_is_transfer_flag"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="start|top"
                    android:ems="10"
                    android:enabled="true"
                    android:maxLength="1"
                    android:hint="@string/transactions_is_transfer_flag"
                    android:inputType="text" >
                    <!-- <requestFocus /> -->
                </EditText>
                <!-- end content -->
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
